tests run after each other. tomcat webapps.dynamic is created and restored automatically tomcat common scripts